Code/ROS2_Code/roverbrain_ws/log/build_2025-07-24_07-54-56/roverbrain_pkg/stderr.log
  File "/home/rover/roverbrain_ws/install/roverbrain_pkg/lib/python3.12/site-packages/roverbrain_pkg/steering_control.py", line 31
    RR_angle = int(RR_angle+90
                  ^
SyntaxError: '(' was never closed

